--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,13 @@
 version: '3'
 services:
   app:
-    container_name: app
     build: .
-    depends_on:
-      - redis
     ports:
       - "5000:80"
+    environment:
+      - SQLITE_PATH=/sqlite.db
     env_file:
       - .env
     volumes:
       - "./static:/app/app/static/"
       - "./data/sqlite.db:/sqlite.db"
-  
-  redis:
-    container_name: redis
-    image: redis:5
